# ve.direct-aggregator

./: README.md  aggregator_spec_de.md  block-monitor.py  cluster.c  deaggregator_spec_de.md  deaggregator_spec_en.md  mppt_read_example.py  multiple.ino  multiple_powerset.ino  powerset_example.py  powerset_interface_spec.md  readtext_spec.md  single.ino  ve_aggregator.py  vedirect_deaggregator.py  vedirect_multiple_powerset_teensy41.ino  vedirect_multiple_teensy41.ino  vedirect_readtext.ino  vedirect_readtext_sendhex.ino  vedirect_readtext_sendhex_teensy41.ino  vedirect_readtext_teensy41.ino  vedirect_simulator.py  vedirect_single_teensy41.ino
hardware_deagg/: CMakeLists.txt  README.md  cluster.h  main.c  router.c  router.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
